SALESDEMO-16 fix overflow of components for unboxed webpages + small frontend fixes

--- a/site/src/main/webapp/css/style.css
+++ b/site/src/main/webapp/css/style.css
@@ -6698,3 +6698,7 @@ Testimonial
         min-height: 400px;
     }
 }
+
+.row .container {
+    width: auto;
+}
